--- a/packages/domain/recovery-lab-synthetic-orchestration/tsconfig.json
+++ b/packages/domain/recovery-lab-synthetic-orchestration/tsconfig.json
@@ -18,6 +18,9 @@
     },
     {
       "path": "./../../shared/type-level/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/type-level-hub/tsconfig.json"
     }
   ]
 }
