--- a/packages/domain/recovery-lab-synthetic-orchestration/package.json
+++ b/packages/domain/recovery-lab-synthetic-orchestration/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@shared/type-level": "workspace:*",
+    "@shared/type-level-hub": "workspace:*",
     "@shared/lab-graph-runtime": "workspace:*",
     "zod": "^3.24.0"
   }
