--- a/packages/app/recovery-console/tsconfig.json
+++ b/packages/app/recovery-console/tsconfig.json
@@ -124,6 +124,9 @@
       "path": "../../shared/type-level-hub/tsconfig.json"
     },
     {
+      "path": "../../shared/type-level-composition/tsconfig.json"
+    },
+    {
       "path": "../../shared/result/tsconfig.json"
     },
     {
