--- a/packages/shared/type-level-hub/tsconfig.json
+++ b/packages/shared/type-level-hub/tsconfig.json
@@ -16,6 +16,9 @@
       "path": "../type-level/tsconfig.json"
     },
     {
+      "path": "../type-level-fabric/tsconfig.json"
+    },
+    {
       "path": "../util/tsconfig.json"
     },
     {
