--- a/packages/app/adaptive-ops-console/package.json
+++ b/packages/app/adaptive-ops-console/package.json
@@ -41,6 +41,7 @@
     "@domain/recovery-lab-stress-lab-core": "workspace:*",
     "@domain/recovery-lab-synthetic-orchestration": "workspace:*",
     "@shared/type-level": "workspace:*",
+    "@shared/type-level-fabric": "workspace:*",
     "@service/recovery-incident-intent-orchestrator": "workspace:*"
     ,
     "@service/recovery-horizon-observability-orchestrator": "workspace:*"
