--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1442,6 +1442,9 @@
       "path": "./packages/shared/type-level-hub"
     },
     {
+      "path": "./packages/shared/type-level-fabric"
+    },
+    {
       "path": "./packages/shared/type-level"
     },
     {
