--- a/packages/app/recovery-incident-dashboard/tsconfig.json
+++ b/packages/app/recovery-incident-dashboard/tsconfig.json
@@ -176,6 +176,9 @@
       "path": "./../../shared/type-level/tsconfig.json"
     },
     {
+      "path": "./../../shared/type-level-hub/tsconfig.json"
+    },
+    {
       "path": "./../../shared/recovery-synthesis-runtime/tsconfig.json"
     },
     {
