--- a/packages/app/fault-intel-console/tsconfig.json
+++ b/packages/app/fault-intel-console/tsconfig.json
@@ -22,6 +22,9 @@
     },
     {
       "path": "./../../data/fault-intel-store/tsconfig.json"
+    },
+    {
+      "path": "./../../shared/type-level-hub/tsconfig.json"
     }
   ]
 }
