--- a/packages/app/adaptive-ops-console/tsconfig.json
+++ b/packages/app/adaptive-ops-console/tsconfig.json
@@ -84,6 +84,9 @@
       "path": "./../../shared/type-level-fabric/tsconfig.json"
     },
     {
+      "path": "./../../shared/type-level-hub/tsconfig.json"
+    },
+    {
       "path": "./../../service/recovery-lattice-orchestrator/tsconfig.json"
     },
     {
